Added report sections implementations (Bit planes, Colors palette, Fourier transform, RGB histogram)

--- a/app/src/main/res/layout/activity_app_settings.xml
+++ b/app/src/main/res/layout/activity_app_settings.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/colorsPaletteParamHint"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
@@ -31,7 +31,7 @@
             app:layout_constraintTop_toBottomOf="@id/languageButton" />
 
         <EditText
-            android:id="@+id/editTextBackendURL"
+            android:id="@+id/editTextColorsNumber"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
@@ -43,7 +43,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textView4" />
+            app:layout_constraintTop_toBottomOf="@id/colorsPaletteParamHint" />
 
         <TextView
             android:id="@+id/language_label"
