--- a/app/src/main/res/layout/image_info_settings_view.xml
+++ b/app/src/main/res/layout/image_info_settings_view.xml
@@ -17,7 +17,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/imageInfoSettingsDescription"
+            android:id="@+id/bitPlanesSettingsDescription"
             style="@style/AppTextBold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -34,7 +34,7 @@
             app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
 
         <TextView
-            android:id="@+id/imageInfoSettingsTitle"
+            android:id="@+id/bitPlanesTitle"
             style="@style/AppTextBold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -55,7 +55,7 @@
             android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageInfoSettingsTitle" />
+            app:layout_constraintTop_toBottomOf="@+id/bitPlanesTitle" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
