--- a/app/src/main/res/layout/rgb_histogram_settings_view.xml
+++ b/app/src/main/res/layout/rgb_histogram_settings_view.xml
@@ -17,7 +17,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/bitPlanesSettingsDescription"
+            android:id="@+id/rgbHistDescription"
             style="@style/AppTextBold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -26,7 +26,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
             android:gravity="center"
-            android:text="@string/fourier_transform_description"
+            android:text="@string/rgb_hist_description"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
@@ -39,7 +39,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="@string/fourier_transform"
+            android:text="@string/rgb_histograms"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
